--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -44,13 +44,13 @@
         @apply flex justify-center items-start;
     }
     .padding-x {
-        @apply md:px-24 sm:px-16 px-6;
+        @apply sm:px-16 px-6;
     }
     .padding-y {
-        @apply md:px-24 sm:py-16 py-6;
+        @apply sm:py-16 py-6;
     }
     .padding {
-        @apply sm:px-16 px-6 sm:py-12 py-4;
+        @apply sm:px-16 px-6 sm:py-12 py-6;
     }
     .margin-x {
         @apply sm:mx-16 mx-6;
