--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,14 @@
     src: url(../fonts/TelkomselBatikSans-Bold.ttf) format("truetype");
 }
 
+@layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+}
+
 @layer components {
     .text-h1 {
         @apply font-telkombatik text-[38px] md:text-5xl leading-[48px] md:leading-[64px];
